argocd/manifests/prod/apps/metabase/ingress-route.yaml
# Use instead of Ingress
# Each app requires one like this if I want to use Auth
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metabase
  namespace: metabase
  labels:
    tinyauth.apps.metabase.oauth.groups: family
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/max-body-size: "100M"
    traefik.ingress.kubernetes.io/readtimeout: "1000s"
    traefik.ingress.kubernetes.io/writetimeout: "1000s"
    traefik.ingress.kubernetes.io/idletimeout: "1000s"
    traefik.ingress.kubernetes.io/retries: "3"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metabase.pengiuns.com`)
      kind: Rule
      middlewares:
        - name: tinyauth
          namespace: metabase
      services:
        - name: metabase
          port: 80
  tls:
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
